# libohfuck

./: .gitignore  CMakeLists.txt  Config.cmake.in  README.md
include/: ohfuck.h
src/: ohfuck.c
